# twilio-refactoring-plan

./: .env.example  MIGRATION.md  README.md  index.html  package-lock.json  package.json  patch_module01.py  patch_module01_v2.py  pyproject.toml  server.py  vite.config.js
.github/workflows/: deploy.yml
deploy/: nginx-refactoring-factory  provision-refactoring.sh  refactoring-factory.service
experiments/: 02_enum_vs_string.py  03_error_tuple_bug.py  04_round_trip.py  05_typeddict_vs_object.py
src/: App.jsx  ModulePicker.jsx  Router.jsx  main.jsx
src/modules/: Module01.jsx  Module02.jsx
src/twilio_refactoring_plan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: CNAME  index.html
static/assets/: index-BAE3SEzH.js  index-BWHDJsuX.js  index-CCz9iEOc.js  index-DMJrlTPJ.js  index-DXy3J93n.js  index-c4FfY_0e.js  index-cYyy-jI-.js  index-mCpetfZT.js
toys/: 01_hydration.py  README.md  _template.py  ai_processing_lockout_toy.py  category_mismatch_toy.py  decorator_layer_violation_toy.py  dip_toy.py  state_error_tuple_bug_toy.py  strict_redis_keys.py  sync_redis_blocking.py  wrong_async_keys.py
