[project]
name            = "twilio-refactoring-plan"
version         = "0.1.0"
description     = "Module 01 worksheet — discovery, debugging & characterization testing"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "cartesia[websockets]>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
